@@ -15,6 +15,13 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Make armour handling coherent between gods, monsters and such.
+Cloaks and bracers are not armour.
+ common/item.c utils.c: fix tests with macros.
+ include/define.h: update macro, new IS_SHIELD.
+ server/apply.c monster.c player.c: use macros.
+Ryo 2007-02-11
+
 Remove last static buffers, use safe string functions.
  common/readable.c
  include/libproto.h
